<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferencias_principal">
    <PreferenceCategory
        android:title="@string/tituloJuego">
        <CheckBoxPreference
            android:key="musica"
            android:title="@string/pref_musica"
            android:summary="@string/pref_sum_musica" />
        <ListPreference
            android:key="graficos"
            android:title="@string/pref_graficos"
            android:summary="@string/pref_sum_graficos"
            android:entries="@array/tiposGraficos"
            android:entryValues="@array/tiposGraficosValores"
            android:defaultValue="1" />
        <EditTextPreference
            android:key="fragmentos"
            android:title="@string/pref_fragmentos"
            android:summary="@string/pref_sum_fragmento"
            android:defaultValue="3" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="preferencias_multijugador"
        android:title="@string/pref_multi">
        <CheckBoxPreference
            android:key="multi"
            android:title="@string/pref_activar" />
        <EditTextPreference
            android:key="jugadores"
            android:title="@string/pref_jugadores"
            android:defaultValue="3" />
        <ListPreference
            android:key="conexion"
            android:title="@string/pref_conexion"
            android:entries="@array/tipoConexion"
            android:entryValues="@array/tipoConexionValor"
            android:defaultValue="1" />
    </PreferenceCategory>
</PreferenceScreen>